--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ footer p {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* display: none; */
+    display: none;
 }
 
 .container2 {
